--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="card">
             <div class="icon"><img class="icon" src="user_icon.svg" alt="user_icon"></div>
             <div class="content_card">
-                <p>Je m'appelle Rudy Daniel, je suis développeur autodidacte. je suis passionner par le développement des sites, 
+                 <p>Je m'appelle Rudy Daniel, je suis développeur autodidacte. je suis passionné par le développement des sites, 
                     je fais beaucoup de front-end et récement je me suis lancé dans le back-end. <br><br> ma maitrise du css me permet 
-                    de compenser mon manque sur le javascript <br><br> Je suis très investis dans met travaux et shouaites en faire mon métier.
+                    de compenser mon manque sur le javascript <br><br> Je suis très investis dans mes travaux et shouaite en faire mon métier.
                 </p>
                 
                 <p class="mail">
